Address review comments

--- a/tutorial/source/stable.ipynb
+++ b/tutorial/source/stable.ipynb
@@ -220,8 +220,8 @@
       "loc = 0.0003696\n",
       "scale = 0.00872\n",
       "stability = 1.977\n",
-      "CPU times: user 13.5 s, sys: 1.07 s, total: 14.5 s\n",
-      "Wall time: 2.66 s\n"
+      "CPU times: user 15.6 s, sys: 521 ms, total: 16.1 s\n",
+      "Wall time: 2.38 s\n"
      ]
     },
     {
@@ -299,12 +299,27 @@
    "source": [
     "## Modeling stochastic volatility  <a class=\"anchor\" id=\"modeling\"></a>\n",
     "\n",
-    "Consider a stochastic volatility model of the log returns $r_t=\\log(p_t\\,/\\,p_{t-1})$ and a latent volatility $h$, where we assume $r$ follows a Brownian motion with volatility $h$ and $\\log h$ follows Brownian motion with constanty diffusion rate $\\sigma$:\n",
+    "We'll next fit a stochastic volatility model.\n",
+    "Let's begin with a constant volatility model where log price $p$ follows Brownian motion\n",
+    "$$\n",
+    "  \\log p_t = \\log p_{t-1} + w_t \\sqrt h\n",
+    "$$\n",
+    "where $w_t$ is a sequence of standard white noise. We can rewrite this model in terms of the log returns $r_t=\\log(p_t\\,/\\,p_{t-1})$:\n",
+    "$$\n",
+    "  r_t = w_t \\sqrt h\n",
+    "$$\n",
+    "Now to account for [volatility clustering](https://en.wikipedia.org/wiki/Volatility_clustering) we can generalize to a stochastic volatility model where volatility $h$ depends on time $t$. Among the simplest such models is one where $h_t$ follows geometric Brownian motion\n",
+    "$$\n",
+    "  \\log h_t = \\log h_{t-1} + \\sigma v_t\n",
+    "$$\n",
+    "where again $v_t$ is a sequence of standard white noise. The entire model thus consists of a geometric Brownian motion $h_t$ that determines the diffusion rate of another geometric Brownian motion $p_t$:\n",
     "$$\n",
     "  \\log h_t = \\log h_{t-1} + \\sigma v_t \\\\\n",
-    "  r_t = w_t \\sqrt h_t\n",
+    "  \\log p_t = \\log p_{t-1} + w_t \\sqrt h_t\n",
     "$$\n",
-    "Usually $v_1$ and $w_t$ are both Gaussian. We will generalize to a Stable distribution for $w_t$."
+    "Usually $v_1$ and $w_t$ are both Gaussian. We will generalize to a Stable distribution for $w_t$, learning three parameters (stability, skew, and location), but still scaling by $\\sqrt h_t$.\n",
+    "\n",
+    "Our Pyro model will sample the increments $v_t$ and record the computation of $\\log h_t$ via [pyro.deterministic](http://docs.pyro.ai/en/stable/primitives.html#pyro.deterministic). Note that there are many ways of implementing this model in Pyro, and geometry can vary depending on implementation. The following version seems to have good geometry, when combined with reparameterizers."
    ]
   },
   {
@@ -314,7 +329,6 @@
    "outputs": [],
    "source": [
     "def model(data):\n",
-    "    # We model volatility as a Brownian motion, where h_noise are the independent increments.\n",
     "    # Note we avoid plates because we'll later reparameterize along the time axis using\n",
     "    # DiscreteCosineReparam, breaking independence. This requires .unsqueeze()ing scalars.\n",
     "    h_0 = pyro.sample(\"h_0\", dist.Normal(0, 1)).unsqueeze(-1)\n",
@@ -384,8 +398,8 @@
       "r_skew = 0.0001597 ± 0.0002002\n",
       "r_stability = 1.92 ± 0.001772\n",
       "sigma = 0.2373 ± 0.000313\n",
-      "CPU times: user 39.6 s, sys: 5.93 s, total: 45.5 s\n",
-      "Wall time: 45.6 s\n"
+      "CPU times: user 38.1 s, sys: 6.95 s, total: 45.1 s\n",
+      "Wall time: 45.1 s\n"
      ]
     },
     {
@@ -434,7 +448,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "It appears the log returns exhibit very little skew, but exhibit a stability parameter slightly but significantly less than 1. We can now visualize the estimated volatility:"
+    "It appears the log returns exhibit very little skew, but exhibit a stability parameter slightly but significantly less than 2. This contrasts the usual Normal model corresponding to a Stable distribution with skew=0 and stability=2. We can now visualize the estimated volatility:"
    ]
   },
   {
