Fix tutorial build for the website

--- a/tutorial/source/stable.ipynb
+++ b/tutorial/source/stable.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Levy Stable models of Stochastic Volatility\n",
+    "# Levy Stable models of Stochastic Volatility\n",
     "\n",
     "This tutorial demonstrates inference using the Levy [Stable](http://docs.pyro.ai/en/stable/distributions.html#stable) distribution through a motivating example of a non-Gaussian stochastic volatilty model.\n",
     "\n",
