Remove inheritance from object

--- a/tutorial/source/effect_handlers.ipynb
+++ b/tutorial/source/effect_handlers.ipynb
@@ -277,7 +277,7 @@
     "\n",
     "Although custom `Messenger`s can override `_process_message` and `_postprocess_message`, it's convenient to avoid requiring all effect handlers to be aware of all possible effectful operation types. For this reason, by default `Messenger._process_message` will use `msg[\"type\"]` to dispatch to a corresponding method `Messenger._pyro_<type>`, e.g. `Messenger._pyro_sample` as in `LogJointMessenger`.  Just as exception handling code ignores unhandled exception types, this allows `Messenger`s to simply forward operations they don't know how to handle up to the next `Messenger` in the stack:\n",
     "```python\n",
-    "class Messenger(object):\n",
+    "class Messenger:\n",
     "    ...\n",
     "    def _process_message(self, msg):\n",
     "        method_name = \"_pyro_{}\".format(msg[\"type\"])  # e.g. _pyro_sample when msg[\"type\"] == \"sample\"\n",
@@ -297,7 +297,7 @@
     "\n",
     "The order in which `Messenger`s are applied to an operation like a `pyro.sample` statement is determined by the order in which their `__enter__` methods are called.  `Messenger.__enter__` appends a `Messenger` to the end (the bottom) of the global handler stack:\n",
     "```python\n",
-    "class Messenger(object):\n",
+    "class Messenger:\n",
     "    ...\n",
     "    # __enter__ pushes a Messenger onto the stack\n",
     "    def __enter__(self):\n",
@@ -569,7 +569,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "class LazyValue(object):\n",
+    "class LazyValue:\n",
     "    def __init__(self, fn, *args, **kwargs):\n",
     "        self._expr = (fn, args, kwargs)\n",
     "        self._value = None\n",
