--- a/tutorial/source/svi_part_iii.ipynb
+++ b/tutorial/source/svi_part_iii.ipynb
@@ -296,7 +296,7 @@
     "    return torch.sum(torch.abs(target - pyro.param(name))).item()\n",
     "\n",
     "\n",
-    "class BernoulliBetaExample(object):\n",
+    "class BernoulliBetaExample:\n",
     "    def __init__(self, max_steps):\n",
     "        # the maximum number of inference steps we do\n",
     "        self.max_steps = max_steps\n",
