--- a/tutorial/source/stable_cox.ipynb
+++ b/tutorial/source/stable_cox.ipynb
@@ -21,6 +21,7 @@
     "import pyro.distributions as dist\n",
     "from pyro.contrib.examples.bart import load_bart_od\n",
     "from pyro.contrib.timeseries.stable import LogStableCoxProcess\n",
+    "from pyro.nn import PyroParam, PyroSample\n",
     "from torch.distributions import constraints\n",
     "\n",
     "%matplotlib inline\n",
@@ -61,7 +62,28 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "station = \"EMBR\"\n",
+    "station_id = dataset[\"stations\"].index(station)\n",
+    "data = counts[:, station_id].sum(-1).unsqueeze(-1)\n",
+    "plt.figure(figsize=(9, 2.5))\n",
+    "plt.plot(data[:4*24*7])\n",
+    "plt.title(\"Departures from {}\".format(station))\n",
+    "plt.xlabel(\"hour after {}\".format(dataset[\"start_date\"][0].strftime(\"%Y-%m-%d\")))\n",
+    "plt.ylabel(\"# riders\")\n",
+    "plt.tight_layout()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "pyro.clear_param_store()\n",
+    "process = LogStableCoxProcess(\"foo\", hidden_dim=1, obs_dim=1, max_rate=1e5)\n",
+    "process.fit(data, learning_rate=1e-3)"
+   ]
   },
   {
    "cell_type": "code",
