Tune .fit()ting

--- a/tutorial/source/stable_cox.ipynb
+++ b/tutorial/source/stable_cox.ipynb
@@ -77,12 +77,21 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [],
    "source": [
+    "%%time\n",
     "pyro.clear_param_store()\n",
-    "process = LogStableCoxProcess(\"foo\", hidden_dim=1, obs_dim=1, max_rate=1e5)\n",
-    "process.fit(data, learning_rate=1e-3)"
+    "process = LogStableCoxProcess(\"rides\", hidden_dim=1, obs_dim=1, max_rate=1e5)\n",
+    "process.model.stability = 1.9  # FIXME remove this\n",
+    "losses = process.fit(data, learning_rate=0.1)\n",
+    "plt.figure(figsize=(9, 2.5))\n",
+    "plt.plot(losses)\n",
+    "plt.xlabel(\"SVI step\")\n",
+    "plt.ylabel(\"loss\")\n",
+    "plt.tight_layout()"
    ]
   },
   {
