add ekf references

--- a/tutorial/source/ekf.ipynb
+++ b/tutorial/source/ekf.ipynb
@@ -35,7 +35,7 @@
     "\n",
     "where $X$ is the position estimate, $P$ is the covariance matrix, $K$ is the Kalman Gain, and $Q$ and $R$ are covariance matrices.\n",
     "\n",
-    "For an in-depth derivation, see \\[1\\]"
+    "For an in-depth derivation, see \\[2\\]"
    ]
   },
   {
@@ -228,6 +228,17 @@
     "    </figcaption> </center>\n",
     "</figure></center>"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## References\n",
+    "\n",
+    "\\[1\\] Kalman, R. E. *A New Approach to Linear Filtering and Prediction Problems.* 1960\n",
+    "\n",
+    "\\[2\\] Welch, Greg, and Bishop, Gary. *An Introduction to the Kalman Filter.* 2006.\n"
+   ]
   }
  ],
  "metadata": {
@@ -246,7 +257,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.2"
+   "version": "3.7.6"
   }
  },
  "nbformat": 4,
