--- a/tutorial/source/forecasting.ipynb
+++ b/tutorial/source/forecasting.ipynb
@@ -32,7 +32,7 @@
     "import pyro.distributions as dist\n",
     "from pyro.contrib.examples.bart import load_bart_od\n",
     "from pyro.contrib.forecast import ForecastingModel, Forecaster, backtest\n",
-    "from pyro.ops.tensor_utils import periodic_cumsum, periodic_repeat\n",
+    "from pyro.ops.tensor_utils import periodic_cumsum, periodic_repeat, periodic_features\n",
     "import matplotlib.pyplot as plt\n",
     "\n",
     "%matplotlib inline\n",
@@ -99,7 +99,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Let's start with a univariate Kalman filter model in log space, with no trend or seasonality."
+    "Let's start with a simple log-linear regression model, with no trend or seasonality."
    ]
   },
   {
@@ -111,13 +111,13 @@
     "# First we need some boilerplate to create a class and define a .model() method.\n",
     "class Model(ForecastingModel):\n",
     "    def model(self, zero_data, covariates):\n",
+    "        time = covariates[..., 0]\n",
     "\n",
     "        # The first part of the model is a probabilistic program to create a prediction.\n",
     "        # We use the zero_data as a template for the shape of the prediction.\n",
-    "        slope = pyro.sample(\"slope\", dist.Normal(0, 1))\n",
-    "        intercept = pyro.sample(\"intercept\", dist.Normal(0, 20))\n",
-    "        time = torch.arange(float(zero_data.size(-2))) / 365\n",
-    "        prediction = (intercept + slope * time).unsqueeze(-1)\n",
+    "        slope = pyro.sample(\"coeff\", dist.Normal(0, 1))\n",
+    "        const = pyro.sample(\"intercept\", dist.Normal(0, 20))\n",
+    "        prediction = intercept + slope * time)\n",
     "        # The prediction should have the same shape as zero_data (duration, obs_dim),\n",
     "        # but may have additional sample dimensions on the left.\n",
     "        assert prediction.shape[-2:] == zero_data.shape\n",
@@ -145,9 +145,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "pyro.clear_param_store()\n",
-    "covariates = data.new_zeros(data.size(-2), 0)  # empty covariates\n",
-    "forecaster = Forecaster(Model(), data, covariates)"
+    "T0 = 0\n",
+    "T2 = data.size(-2)\n",
+    "T1 = T2 - 52"
    ]
   },
   {
@@ -156,30 +156,54 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "T0 = 0\n",
-    "T1 = data.size(-2)\n",
-    "T2 = T1 + 52\n",
-    "covariates = data.new_zeros(data.size(-2) + 52, 0)\n",
-    "samples = forecaster(data, covariates, num_samples=20)\n",
+    "pyro.clear_param_store()\n",
+    "time = torch.arange(float(T2)) / 365\n",
+    "covariates = torch.stack([time], dim=-1)\n",
+    "forecaster = Forecaster(Model(), data[:T1], covariates[:T1])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "samples = forecaster(data[:T1], covariates, num_samples=20)\n",
     "print(samples.shape)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [],
    "source": [
     "plt.figure(figsize=(9, 3))\n",
-    "plt.plot(data, 'k-', label='truth')\n",
     "plt.plot(torch.arange(T1, T2), samples.squeeze(-1).T, 'r-', lw=1, alpha=0.5)\n",
     "plt.plot([], 'r-', lw=1, alpha=0.5, label='forecast')\n",
+    "plt.plot(data, 'k-', label='truth')\n",
     "plt.title(\"Total weekly ridership\")\n",
     "plt.ylabel(\"log(# rides)\")\n",
     "plt.xlabel(\"Week after 2011-01-01\")\n",
     "plt.xlim(0, None)\n",
     "plt.legend(loc=\"best\");"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "We could add a yearly seasonal component simply by adding new covariates."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "markdown",
