--- a/tutorial/source/forecasting.ipynb
+++ b/tutorial/source/forecasting.ipynb
@@ -33,6 +33,7 @@
     "from pyro.contrib.examples.bart import load_bart_od\n",
     "from pyro.contrib.forecast import ForecastingModel, Forecaster, backtest\n",
     "from pyro.ops.tensor_utils import periodic_cumsum, periodic_repeat, periodic_features\n",
+    "from pyro.ops.stats import quantile\n",
     "import matplotlib.pyplot as plt\n",
     "\n",
     "%matplotlib inline\n",
@@ -111,13 +112,14 @@
     "# First we need some boilerplate to create a class and define a .model() method.\n",
     "class Model(ForecastingModel):\n",
     "    def model(self, zero_data, covariates):\n",
-    "        time = covariates[..., 0]\n",
+    "        data_dim = zero_data.size(-1)\n",
+    "        feature_dim = covariates.size(-1)\n",
     "\n",
     "        # The first part of the model is a probabilistic program to create a prediction.\n",
     "        # We use the zero_data as a template for the shape of the prediction.\n",
-    "        slope = pyro.sample(\"coeff\", dist.Normal(0, 1))\n",
-    "        const = pyro.sample(\"intercept\", dist.Normal(0, 20))\n",
-    "        prediction = intercept + slope * time)\n",
+    "        bias = pyro.sample(\"bias\", dist.Normal(0, 20).expand([data_dim]).to_event(1))\n",
+    "        weight = pyro.sample(\"weight\", dist.Normal(0, 0.1).expand([feature_dim]).to_event(1))\n",
+    "        prediction = bias + (weight * covariates).sum(-1, keepdim=True)\n",
     "        # The prediction should have the same shape as zero_data (duration, obs_dim),\n",
     "        # but may have additional sample dimensions on the left.\n",
     "        assert prediction.shape[-2:] == zero_data.shape\n",
@@ -125,7 +127,7 @@
     "        # The next part of the model creates a likelihood or noise distribution.\n",
     "        # Again we'll be Bayesian and write this as a probabilistic program with\n",
     "        # priors over parameters, and again we'll use zero_data as a noise template.\n",
-    "        noise_scale = pyro.sample(\"noise_scale\", dist.LogNormal(0, 1).expand([1]).to_event(1))\n",
+    "        noise_scale = pyro.sample(\"noise_scale\", dist.LogNormal(-5, 1).expand([1]).to_event(1))\n",
     "        noise_dist = dist.Normal(zero_data, noise_scale)\n",
     "\n",
     "        # The final step is to call the .predict() method.\n",
@@ -156,20 +158,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "%%time\n",
     "pyro.clear_param_store()\n",
     "time = torch.arange(float(T2)) / 365\n",
     "covariates = torch.stack([time], dim=-1)\n",
-    "forecaster = Forecaster(Model(), data[:T1], covariates[:T1])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "samples = forecaster(data[:T1], covariates, num_samples=20)\n",
-    "print(samples.shape)"
+    "forecaster = Forecaster(Model(), data[:T1], covariates[:T1], num_steps=2001)"
    ]
   },
   {
@@ -180,14 +173,35 @@
    },
    "outputs": [],
    "source": [
+    "samples = forecaster(data[:T1], covariates, num_samples=1000)\n",
+    "p10, p50, p90 = quantile(samples, (0.1, 0.5, 0.9)).squeeze(-1)\n",
+    "print(samples.shape, quantiles.shape)\n",
+    "\n",
     "plt.figure(figsize=(9, 3))\n",
-    "plt.plot(torch.arange(T1, T2), samples.squeeze(-1).T, 'r-', lw=1, alpha=0.5)\n",
-    "plt.plot([], 'r-', lw=1, alpha=0.5, label='forecast')\n",
+    "plt.fill_between(torch.arange(T1, T2), p10, p90, color=\"red\", alpha=0.3)\n",
+    "plt.plot(torch.arange(T1, T2), p50, 'r-', label='forecast')\n",
     "plt.plot(data, 'k-', label='truth')\n",
     "plt.title(\"Total weekly ridership\")\n",
     "plt.ylabel(\"log(# rides)\")\n",
     "plt.xlabel(\"Week after 2011-01-01\")\n",
     "plt.xlim(0, None)\n",
+    "plt.legend(loc=\"best\");"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "plt.figure(figsize=(9, 3))\n",
+    "plt.fill_between(torch.arange(T1, T2), p10, p90, color=\"red\", alpha=0.3)\n",
+    "plt.plot(torch.arange(T1, T2), p50, 'r-', label='forecast')\n",
+    "plt.plot(torch.arange(T1, T2), data[T1:], 'k-', label='truth')\n",
+    "plt.title(\"Total weekly ridership\")\n",
+    "plt.ylabel(\"log(# rides)\")\n",
+    "plt.xlabel(\"Week after 2011-01-01\")\n",
+    "plt.xlim(T1, None)\n",
     "plt.legend(loc=\"best\");"
    ]
   },
@@ -203,7 +217,52 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "%%time\n",
+    "pyro.clear_param_store()\n",
+    "time = torch.arange(float(T2)) / 365\n",
+    "covariates = torch.cat([time.unsqueeze(-1),\n",
+    "                        periodic_features(T2, 365.25 / 7)], dim=-1)\n",
+    "forecaster = Forecaster(Model(), data[:T1], covariates[:T1], num_steps=2001)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "samples = forecaster(data[:T1], covariates, num_samples=1000)\n",
+    "p10, p50, p90 = quantile(samples, (0.1, 0.5, 0.9)).squeeze(-1)\n",
+    "print(samples.shape, quantiles.shape)\n",
+    "\n",
+    "plt.figure(figsize=(9, 3))\n",
+    "plt.fill_between(torch.arange(T1, T2), p10, p90, color=\"red\", alpha=0.3)\n",
+    "plt.plot(torch.arange(T1, T2), p50, 'r-', label='forecast')\n",
+    "plt.plot(data, 'k-', label='truth')\n",
+    "plt.title(\"Total weekly ridership\")\n",
+    "plt.ylabel(\"log(# rides)\")\n",
+    "plt.xlabel(\"Week after 2011-01-01\")\n",
+    "plt.xlim(0, None)\n",
+    "plt.legend(loc=\"best\");"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "plt.figure(figsize=(9, 3))\n",
+    "plt.fill_between(torch.arange(T1, T2), p10, p90, color=\"red\", alpha=0.3)\n",
+    "plt.plot(torch.arange(T1, T2), p50, 'r-', label='forecast')\n",
+    "plt.plot(torch.arange(T1, T2), data[T1:], 'k-', label='truth')\n",
+    "plt.title(\"Total weekly ridership\")\n",
+    "plt.ylabel(\"log(# rides)\")\n",
+    "plt.xlabel(\"Week after 2011-01-01\")\n",
+    "plt.xlim(T1, None)\n",
+    "plt.legend(loc=\"best\");"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -220,19 +279,83 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# First we need some boilerplate to create a class and define a .model() method.\n",
     "class Model(ForecastingModel):\n",
     "    def model(self, zero_data, covariates):\n",
-    "        raise NotImplementedError(\"TODO\")"
+    "        data_dim = zero_data.size(-1)\n",
+    "        feature_dim = covariates.size(-1)\n",
+    "        \n",
+    "        bias = pyro.sample(\"bias\", dist.Normal(0, 20).expand([data_dim]).to_event(1))\n",
+    "        weight = pyro.sample(\"weight\", dist.Normal(0, 0.1).expand([feature_dim]).to_event(1))\n",
+    "        \n",
+    "        drift_scale = pyro.sample(\"drift_scale\", dist.LogNormal(-10, 5).expand([1]).to_event(1))\n",
+    "        with self.time_plate:\n",
+    "            drift = pyro.sample(\"drift\", dist.Normal(zero_data, drift_scale).to_event(1))\n",
+    "        motion = drift.cumsum(-2)\n",
+    "        \n",
+    "        prediction = motion + bias + (weight * covariates).sum(-1, keepdim=True)\n",
+    "        assert prediction.shape[-2:] == zero_data.shape\n",
+    "\n",
+    "        # The next part of the model creates a likelihood or noise distribution.\n",
+    "        # Again we'll be Bayesian and write this as a probabilistic program with\n",
+    "        # priors over parameters, and again we'll use zero_data as a noise template.\n",
+    "        noise_scale = pyro.sample(\"noise_scale\", dist.LogNormal(-5, 1).expand([1]).to_event(1))\n",
+    "        noise_dist = dist.Normal(zero_data, noise_scale)\n",
+    "\n",
+    "        # The final step is to call the .predict() method.\n",
+    "        self.predict(noise_dist, prediction)"
    ]
   },
   {
-   "cell_type": "markdown",
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
+   "outputs": [],
    "source": [
-    "### Regression against covariates\n",
+    "%%time\n",
+    "pyro.clear_param_store()\n",
+    "time = torch.arange(float(T2)) / 365\n",
+    "covariates = torch.cat([time.unsqueeze(-1),\n",
+    "                        periodic_features(T2, 365.25 / 7)], dim=-1)\n",
+    "forecaster = Forecaster(Model(), data[:T1], covariates[:T1], num_steps=2001,\n",
+    "                        dct_gradients=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "samples = forecaster(data[:T1], covariates, num_samples=1000)\n",
+    "p10, p50, p90 = quantile(samples, (0.1, 0.5, 0.9)).squeeze(-1)\n",
+    "print(samples.shape, quantiles.shape)\n",
     "\n",
-    "To demonstrate how to regress against covariates, let's add an annual seasonality component to our model."
+    "plt.figure(figsize=(9, 3))\n",
+    "plt.fill_between(torch.arange(T1, T2), p10, p90, color=\"red\", alpha=0.3)\n",
+    "plt.plot(torch.arange(T1, T2), p50, 'r-', label='forecast')\n",
+    "plt.plot(data, 'k-', label='truth')\n",
+    "plt.title(\"Total weekly ridership\")\n",
+    "plt.ylabel(\"log(# rides)\")\n",
+    "plt.xlabel(\"Week after 2011-01-01\")\n",
+    "plt.xlim(0, None)\n",
+    "plt.legend(loc=\"best\");"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "plt.figure(figsize=(9, 3))\n",
+    "plt.fill_between(torch.arange(T1, T2), p10, p90, color=\"red\", alpha=0.3)\n",
+    "plt.plot(torch.arange(T1, T2), p50, 'r-', label='forecast')\n",
+    "plt.plot(torch.arange(T1, T2), data[T1:], 'k-', label='truth')\n",
+    "plt.title(\"Total weekly ridership\")\n",
+    "plt.ylabel(\"log(# rides)\")\n",
+    "plt.xlabel(\"Week after 2011-01-01\")\n",
+    "plt.xlim(T1, None)\n",
+    "plt.legend(loc=\"best\");"
    ]
   },
   {
