Get univariate forecasting to work

--- a/tutorial/source/forecasting.ipynb
+++ b/tutorial/source/forecasting.ipynb
@@ -30,8 +30,10 @@
     "import torch\n",
     "import pyro\n",
     "import pyro.distributions as dist\n",
+    "import pyro.poutine as poutine\n",
     "from pyro.contrib.examples.bart import load_bart_od\n",
     "from pyro.contrib.forecast import ForecastingModel, Forecaster, backtest\n",
+    "from pyro.infer.reparam import LocScaleReparam\n",
     "from pyro.ops.tensor_utils import periodic_cumsum, periodic_repeat, periodic_features\n",
     "from pyro.ops.stats import quantile\n",
     "import matplotlib.pyplot as plt\n",
@@ -117,7 +119,7 @@
     "\n",
     "        # The first part of the model is a probabilistic program to create a prediction.\n",
     "        # We use the zero_data as a template for the shape of the prediction.\n",
-    "        bias = pyro.sample(\"bias\", dist.Normal(0, 20).expand([data_dim]).to_event(1))\n",
+    "        bias = pyro.sample(\"bias\", dist.Normal(0, 10).expand([data_dim]).to_event(1))\n",
     "        weight = pyro.sample(\"weight\", dist.Normal(0, 0.1).expand([feature_dim]).to_event(1))\n",
     "        prediction = bias + (weight * covariates).sum(-1, keepdim=True)\n",
     "        # The prediction should have the same shape as zero_data (duration, obs_dim),\n",
@@ -127,7 +129,7 @@
     "        # The next part of the model creates a likelihood or noise distribution.\n",
     "        # Again we'll be Bayesian and write this as a probabilistic program with\n",
     "        # priors over parameters, and again we'll use zero_data as a noise template.\n",
-    "        noise_scale = pyro.sample(\"noise_scale\", dist.LogNormal(-5, 1).expand([1]).to_event(1))\n",
+    "        noise_scale = pyro.sample(\"noise_scale\", dist.LogNormal(-5, 5).expand([1]).to_event(1))\n",
     "        noise_dist = dist.Normal(zero_data, noise_scale)\n",
     "\n",
     "        # The final step is to call the .predict() method.\n",
@@ -162,7 +164,7 @@
     "pyro.clear_param_store()\n",
     "time = torch.arange(float(T2)) / 365\n",
     "covariates = torch.stack([time], dim=-1)\n",
-    "forecaster = Forecaster(Model(), data[:T1], covariates[:T1], num_steps=2001)"
+    "forecaster = Forecaster(Model(), data[:T1], covariates[:T1], learning_rate=0.1)"
    ]
   },
   {
@@ -175,7 +177,7 @@
    "source": [
     "samples = forecaster(data[:T1], covariates, num_samples=1000)\n",
     "p10, p50, p90 = quantile(samples, (0.1, 0.5, 0.9)).squeeze(-1)\n",
-    "print(samples.shape, quantiles.shape)\n",
+    "print(samples.shape, p10.shape)\n",
     "\n",
     "plt.figure(figsize=(9, 3))\n",
     "plt.fill_between(torch.arange(T1, T2), p10, p90, color=\"red\", alpha=0.3)\n",
@@ -223,7 +225,7 @@
     "time = torch.arange(float(T2)) / 365\n",
     "covariates = torch.cat([time.unsqueeze(-1),\n",
     "                        periodic_features(T2, 365.25 / 7)], dim=-1)\n",
-    "forecaster = Forecaster(Model(), data[:T1], covariates[:T1], num_steps=2001)"
+    "forecaster = Forecaster(Model(), data[:T1], covariates[:T1], learning_rate=0.1)"
    ]
   },
   {
@@ -234,7 +236,6 @@
    "source": [
     "samples = forecaster(data[:T1], covariates, num_samples=1000)\n",
     "p10, p50, p90 = quantile(samples, (0.1, 0.5, 0.9)).squeeze(-1)\n",
-    "print(samples.shape, quantiles.shape)\n",
     "\n",
     "plt.figure(figsize=(9, 3))\n",
     "plt.fill_between(torch.arange(T1, T2), p10, p90, color=\"red\", alpha=0.3)\n",
@@ -270,7 +271,7 @@
    "source": [
     "### Time-local random variables: `self.time_plate`\n",
     "\n",
-    "So far we've seen the ``ForecastingModel.model()`` method and ``self.predict()``. The last piece of forecasting-specific syntax is the ``self.time_plate`` context for time-local variables. To see how this works, consider generalizing our global linear trend model above to a local linear trend model with slowly drifting slope."
+    "So far we've seen the ``ForecastingModel.model()`` method and ``self.predict()``. The last piece of forecasting-specific syntax is the ``self.time_plate`` context for time-local variables. To see how this works, consider changing our global linear trend model above to a local level model."
    ]
   },
   {
@@ -283,14 +284,17 @@
     "    def model(self, zero_data, covariates):\n",
     "        data_dim = zero_data.size(-1)\n",
     "        feature_dim = covariates.size(-1)\n",
-    "        \n",
-    "        bias = pyro.sample(\"bias\", dist.Normal(0, 20).expand([data_dim]).to_event(1))\n",
+    "        bias = pyro.sample(\"bias\", dist.Normal(0, 10).expand([data_dim]).to_event(1))\n",
     "        weight = pyro.sample(\"weight\", dist.Normal(0, 0.1).expand([feature_dim]).to_event(1))\n",
-    "        \n",
-    "        drift_scale = pyro.sample(\"drift_scale\", dist.LogNormal(-10, 5).expand([1]).to_event(1))\n",
+    "\n",
+    "        # We'll sample a time-global scale parameter outside the time plate,\n",
+    "        # then time-local iid noise inside the time plate.\n",
+    "        drift_scale = pyro.sample(\"drift_scale\", dist.LogNormal(-20, 5).expand([1]).to_event(1))\n",
     "        with self.time_plate:\n",
-    "            drift = pyro.sample(\"drift\", dist.Normal(zero_data, drift_scale).to_event(1))\n",
-    "        motion = drift.cumsum(-2)\n",
+    "            # We'll use a reparameterizer to improve variational fit.\n",
+    "            with poutine.reparam(config={\"drift\": LocScaleReparam()}):\n",
+    "                drift = pyro.sample(\"drift\", dist.Normal(zero_data, drift_scale).to_event(1))\n",
+    "        motion = drift.cumsum(-2)  # A Brownian motion.\n",
     "        \n",
     "        prediction = motion + bias + (weight * covariates).sum(-1, keepdim=True)\n",
     "        assert prediction.shape[-2:] == zero_data.shape\n",
@@ -298,11 +302,11 @@
     "        # The next part of the model creates a likelihood or noise distribution.\n",
     "        # Again we'll be Bayesian and write this as a probabilistic program with\n",
     "        # priors over parameters, and again we'll use zero_data as a noise template.\n",
-    "        noise_scale = pyro.sample(\"noise_scale\", dist.LogNormal(-5, 1).expand([1]).to_event(1))\n",
+    "        noise_scale = pyro.sample(\"noise_scale\", dist.LogNormal(-5, 5).expand([1]).to_event(1))\n",
     "        noise_dist = dist.Normal(zero_data, noise_scale)\n",
     "\n",
     "        # The final step is to call the .predict() method.\n",
-    "        self.predict(noise_dist, prediction)"
+    "        self.predict(noise_dist, prediction)            "
    ]
   },
   {
@@ -314,10 +318,8 @@
     "%%time\n",
     "pyro.clear_param_store()\n",
     "time = torch.arange(float(T2)) / 365\n",
-    "covariates = torch.cat([time.unsqueeze(-1),\n",
-    "                        periodic_features(T2, 365.25 / 7)], dim=-1)\n",
-    "forecaster = Forecaster(Model(), data[:T1], covariates[:T1], num_steps=2001,\n",
-    "                        dct_gradients=True)"
+    "covariates = periodic_features(T2, 365.25 / 7)\n",
+    "forecaster = Forecaster(Model(), data[:T1], covariates[:T1], learning_rate=0.1)"
    ]
   },
   {
@@ -328,7 +330,6 @@
    "source": [
     "samples = forecaster(data[:T1], covariates, num_samples=1000)\n",
     "p10, p50, p90 = quantile(samples, (0.1, 0.5, 0.9)).squeeze(-1)\n",
-    "print(samples.shape, quantiles.shape)\n",
     "\n",
     "plt.figure(figsize=(9, 3))\n",
     "plt.fill_between(torch.arange(T1, T2), p10, p90, color=\"red\", alpha=0.3)\n",
