Patch vae tutorial

--- a/tutorial/source/vae.ipynb
+++ b/tutorial/source/vae.ipynb
@@ -104,6 +104,7 @@
     "\n",
     "import pyro\n",
     "import pyro.distributions as dist\n",
+    "import pyro.contrib.examples.util  # patches torchvision\n",
     "from pyro.infer import SVI, Trace_ELBO\n",
     "from pyro.optim import Adam"
    ]
