--- a/tutorial/source/forecasting_i.ipynb
+++ b/tutorial/source/forecasting_i.ipynb
@@ -428,7 +428,8 @@
     "\n",
     "        # We'll sample a time-global scale parameter outside the time plate,\n",
     "        # then time-local iid noise inside the time plate.\n",
-    "        drift_scale = pyro.sample(\"drift_scale\", dist.LogNormal(-20, 5).expand([1]).to_event(1))\n",
+    "        drift_scale = pyro.sample(\"drift_scale\",\n",
+    "                                  dist.LogNormal(-20, 5).expand([1]).to_event(1))\n",
     "        with self.time_plate:\n",
     "            # We'll use a reparameterizer to improve variational fit. The model would still be\n",
     "            # correct if you removed this context manager, but the fit appears to be worse.\n",
@@ -436,7 +437,7 @@
     "                drift = pyro.sample(\"drift\", dist.Normal(zero_data, drift_scale).to_event(1))\n",
     "\n",
     "        # After we sample the iid \"drift\" noise we can combine it in any time-dependent way.\n",
-    "        # It is important to keep everything inside the plate independent and apply depedent\n",
+    "        # It is important to keep everything inside the plate independent and apply dependent\n",
     "        # transforms outside the plate.\n",
     "        motion = drift.cumsum(-2)  # A Brownian motion.\n",
     "    \n",
