--- a/tutorial/source/forecasting_ii.ipynb
+++ b/tutorial/source/forecasting_ii.ipynb
@@ -52,7 +52,7 @@
     "\n",
     "Pyro's inference for `GaussianHMM` uses parallel-scan Kalman filtering, allowing fast analysis of very long time series. Similarly, Pyro's inference for `LinearHMM` uses entirely parallel auxiliary variable methods to reduce to a `GaussianHMM`, which then permits parallel-scan inference. Thus both methods allow parallelization of long time series analysis, even for a single univariate time series.\n",
     "\n",
-    "Let's again look at the [BART train](https://www.bart.gov/about/reports/ridership) ridersip dataset:"
+    "Let's again look at the [BART train](https://www.bart.gov/about/reports/ridership) ridership dataset:"
    ]
   },
   {
