Mention OU process

--- a/tutorial/source/forecasting_ii.ipynb
+++ b/tutorial/source/forecasting_ii.ipynb
@@ -142,7 +142,7 @@
    "source": [
     "## GaussianHMM\n",
     "\n",
-    "Let's start by modeling hourly seasonality together with a local linear trend, where we model seasonality via regression and local linear trend via a [GaussianHMM](http://docs.pyro.ai/en/latest/distributions.html#gaussianhmm)."
+    "Let's start by modeling hourly seasonality together with a local linear trend, where we model seasonality via regression and local linear trend via a [GaussianHMM](http://docs.pyro.ai/en/latest/distributions.html#gaussianhmm). This noise model includes a mean-reverting hidden state (an [Ornstein-Uhlenbeck process](https://en.wikipedia.org/wiki/Ornstein%E2%80%93Uhlenbeck_process)) plus Gaussian observation noise."
    ]
   },
   {
