Flesh out hierarchical modeling tutorial

--- a/tutorial/source/forecasting_ii.ipynb
+++ b/tutorial/source/forecasting_ii.ipynb
@@ -8,6 +8,11 @@
     "\n",
     "This tutorial covers state space modeling with the [pyro.contrib.forecast](http://docs.pyro.ai/en/latest/contrib.forecast.html) module. This tutorial assumes the reader is already familiar with [SVI](http://pyro.ai/examples/svi_part_ii.html), [tensor shapes](http://pyro.ai/examples/tensor_shapes.html), and [univariate forecasting](http://pyro.ai/examples/forecasting_i.html).\n",
     "\n",
+    "See also:\n",
+    "\n",
+    "- [Forecasting I: univariate, heavy tailed](http://pyro.ai/examples/forecasting_i.html)\n",
+    "- [Forecasting III: multivariate, hierarchical](http://pyro.ai/examples/forecasting_iii.html)\n",
+    "\n",
     "#### Summary\n",
     "\n",
     "- Pyro's [ForecastingModel](http://docs.pyro.ai/en/latest/contrib.forecast.html#pyro.contrib.forecast.forecaster.ForecastingModel) can combine regression, variational inference, and exact inference.\n",
