Finish first draft

--- a/tutorial/source/forecasting_i.ipynb
+++ b/tutorial/source/forecasting_i.ipynb
@@ -11,7 +11,7 @@
     "See also:\n",
     "\n",
     "- [Forecasting II: state space models](http://pyro.ai/examples/forecasting_ii.html)\n",
-    "- [Forecasting III: multivariate, hierarchical](http://pyro.ai/examples/forecasting_iii.html)\n",
+    "- [Forecasting III: hierarchical models](http://pyro.ai/examples/forecasting_iii.html)\n",
     "\n",
     "#### Summary\n",
     "\n",
