--- a/tutorial/source/forecasting_ii.ipynb
+++ b/tutorial/source/forecasting_ii.ipynb
@@ -11,7 +11,7 @@
     "See also:\n",
     "\n",
     "- [Forecasting I: univariate, heavy tailed](http://pyro.ai/examples/forecasting_i.html)\n",
-    "- [Forecasting III: multivariate, hierarchical](http://pyro.ai/examples/forecasting_iii.html)\n",
+    "- [Forecasting III: hierarchical models](http://pyro.ai/examples/forecasting_iii.html)\n",
     "\n",
     "#### Summary\n",
     "\n",
