--- a/tutorial/source/forecasting_i.ipynb
+++ b/tutorial/source/forecasting_i.ipynb
@@ -146,9 +146,9 @@
     "\n",
     "        # The next part of the model creates a likelihood or noise distribution.\n",
     "        # Again we'll be Bayesian and write this as a probabilistic program with\n",
-    "        # priors over parameters, and again we'll use zero_data as a noise template.\n",
+    "        # priors over parameters.\n",
     "        noise_scale = pyro.sample(\"noise_scale\", dist.LogNormal(-5, 5).expand([1]).to_event(1))\n",
-    "        noise_dist = dist.Normal(zero_data, noise_scale)\n",
+    "        noise_dist = dist.Normal(0, noise_scale)\n",
     "\n",
     "        # The final step is to call the .predict() method.\n",
     "        self.predict(noise_dist, prediction)"
@@ -447,7 +447,7 @@
     "    \n",
     "        # Construct the noise distribution and predict.\n",
     "        noise_scale = pyro.sample(\"noise_scale\", dist.LogNormal(-5, 5).expand([1]).to_event(1))\n",
-    "        noise_dist = dist.Normal(zero_data, noise_scale)\n",
+    "        noise_dist = dist.Normal(0, noise_scale)\n",
     "        self.predict(noise_dist, prediction)            "
    ]
   },
@@ -588,11 +588,11 @@
     "\n",
     "        # The next part of the model creates a likelihood or noise distribution.\n",
     "        # Again we'll be Bayesian and write this as a probabilistic program with\n",
-    "        # priors over parameters, and again we'll use zero_data as a noise template.\n",
+    "        # priors over parameters.\n",
     "        stability = pyro.sample(\"noise_stability\", dist.Uniform(1, 2).expand([1]).to_event(1))\n",
     "        skew = pyro.sample(\"noise_skew\", dist.Uniform(-1, 1).expand([1]).to_event(1))\n",
     "        scale = pyro.sample(\"noise_scale\", dist.LogNormal(-5, 5).expand([1]).to_event(1))\n",
-    "        noise_dist = dist.Stable(stability, skew, scale, zero_data)\n",
+    "        noise_dist = dist.Stable(stability, skew, scale)\n",
     "\n",
     "        # We need to use a reparameterizer to handle the Stable distribution.\n",
     "        # Note \"residual\" is the name of Pyro's internal sample site in self.predict().\n",
