Remove obsolete .expand()

--- a/tutorial/source/forecasting_iii.ipynb
+++ b/tutorial/source/forecasting_iii.ipynb
@@ -173,7 +173,7 @@
     "        # Finally we can construct a noise distribution.\n",
     "        # We will share parameters across all time series.\n",
     "        obs_scale = pyro.sample(\"obs_scale\", dist.LogNormal(-5, 5))\n",
-    "        noise_dist = dist.Normal(zero_data, obs_scale.unsqueeze(-1))\n",
+    "        noise_dist = dist.Normal(0, obs_scale.unsqueeze(-1))\n",
     "        self.predict(noise_dist, prediction)"
    ]
   },
@@ -384,7 +384,7 @@
     "        # At this point our prediction and scale have shape (50, 50, duration) and (50, 50, 1)\n",
     "        # respectively, but we want them to have shape (50, 50, duration, 1) to satisfy the\n",
     "        # Forecaster requirements.\n",
-    "        scale = scale.unsqueeze(-1).expand(scale.shape[:-1] + (duration, 1))\n",
+    "        scale = scale.unsqueeze(-1)\n",
     "        prediction = prediction.unsqueeze(-1)\n",
     "\n",
     "        # Finally we construct a noise distribution and call predict.\n",
