--- a/tutorial/source/forecasting_iii.ipynb
+++ b/tutorial/source/forecasting_iii.ipynb
@@ -328,7 +328,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "This model will have two levels of hierarchy: origin, destination, and time, each modeled as a [plate](http://docs.pyro.ai/en/latest/primitives.html#pyro.plate). We can create sample sites in many combinations of plate contexts, allowing many different ways to share statistical strength."
+    "This model will have three levels of hierarchy: origin, destination, and time, each modeled as a [plate](http://docs.pyro.ai/en/latest/primitives.html#pyro.plate). We can create sample sites in many combinations of plate contexts, allowing many different ways to share statistical strength."
    ]
   },
   {
@@ -348,7 +348,7 @@
     "        hour_of_week_plate = pyro.plate(\"hour_of_week\", 24 * 7, dim=-1)\n",
     "\n",
     "        # Let's model the time-dependent part with only O(num_stations * duration) many\n",
-    "        # parameters, rather than the full possible O(num_stations ** 1 * duration) data size.\n",
+    "        # parameters, rather than the full possible O(num_stations ** 2 * duration) data size.\n",
     "        drift_stability = pyro.sample(\"drift_stability\", dist.Uniform(1, 2))\n",
     "        drift_scale = pyro.sample(\"drift_scale\", dist.LogNormal(-20, 5))\n",
     "        with origin_plate:\n",
@@ -387,7 +387,7 @@
     "        scale = scale.unsqueeze(-1)\n",
     "        prediction = prediction.unsqueeze(-1)\n",
     "\n",
-    "        # Finally we construct a noise distribution and call predict.\n",
+    "        # Finally we construct a noise distribution and call the .predict() method.\n",
     "        # Note that predict must be called inside the origin and destination plates.\n",
     "        noise_dist = dist.Normal(0, scale)\n",
     "        with origin_plate, destin_plate:\n",
@@ -604,7 +604,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Even though we're runing for more iterations (1201 instead of 501), each iteration is cheaper, and the total time is reduced by more than a factor of three, with nearly identical accuracy:"
+    "Even though we're running for more iterations (1201 instead of 501), each iteration is cheaper, and the total time is reduced by more than a factor of three, with nearly identical accuracy:"
    ]
   },
   {
