Address review comments

--- a/tutorial/source/forecasting_iii.ipynb
+++ b/tutorial/source/forecasting_iii.ipynb
@@ -141,7 +141,7 @@
     "        drift_scale = pyro.sample(\"drift_scale\", dist.LogNormal(-20, 5))\n",
     "        with pyro.plate(\"origin\", data_dim, dim=-2):\n",
     "            # Now inside of the origin plate we sample drift and seasonal components.\n",
-    "            # All the time series inside the \"origin\" plate is conditionally independent,\n",
+    "            # All the time series inside the \"origin\" plate are independent,\n",
     "            # given the drift parameters above.\n",
     "            with self.time_plate:\n",
     "                # We combine two different reparameterizers: the inner SymmetricStableReparam\n",
@@ -542,7 +542,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Now we can train as usual. However since gradient estimates will have higher variance, we run for more iterations. We'll use the same learning rate and let the Adam optimizer adjust gradient estimates."
+    "Now we can train as usual. However since gradient estimates will have higher variance, we run for more iterations. We'll use the same learning rate and let the Adam optimizer adjust per-parameter learning rates."
    ]
   },
   {
