Print stability parameter

--- a/tutorial/source/forecasting_iii.ipynb
+++ b/tutorial/source/forecasting_iii.ipynb
@@ -225,8 +225,8 @@
       "drift_stability = 1.997\n",
       "drift_scale = 3.863e-08\n",
       "obs_scale = 0.4636\n",
-      "CPU times: user 29.8 s, sys: 4.29 s, total: 34.1 s\n",
-      "Wall time: 34 s\n"
+      "CPU times: user 28.1 s, sys: 4.29 s, total: 32.4 s\n",
+      "Wall time: 31.9 s\n"
      ]
     }
    ],
@@ -420,7 +420,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: user 2min 16s, sys: 47.8 s, total: 3min 3s\n",
+      "drift_stability = 1.593\n",
+      "drift_scale = 6.594e-07\n",
+      "CPU times: user 2min 9s, sys: 54.6 s, total: 3min 3s\n",
       "Wall time: 3min 4s\n"
      ]
     }
@@ -431,7 +433,10 @@
     "pyro.clear_param_store()\n",
     "covariates = torch.zeros(data.size(-2), 0)  # empty\n",
     "forecaster = Forecaster(Model2(), data[..., T0:T1, :], covariates[T0:T1],\n",
-    "                        learning_rate=0.1, learning_rate_decay=1, num_steps=501, log_every=50)"
+    "                        learning_rate=0.1, learning_rate_decay=1, num_steps=501, log_every=50)\n",
+    "for name, value in forecaster.guide.median().items():\n",
+    "    if value.numel() == 1:\n",
+    "        print(\"{} = {:0.4g}\".format(name, value.item()))"
    ]
   },
   {
@@ -451,8 +456,8 @@
      "output_type": "stream",
      "text": [
       "torch.Size([100, 50, 50, 336, 1]) torch.Size([50, 50, 336])\n",
-      "CPU times: user 22.2 s, sys: 7.34 s, total: 29.6 s\n",
-      "Wall time: 32.2 s\n"
+      "CPU times: user 21.5 s, sys: 7.95 s, total: 29.4 s\n",
+      "Wall time: 32.4 s\n"
      ]
     }
    ],
@@ -585,8 +590,10 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: user 47.7 s, sys: 7.29 s, total: 55 s\n",
-      "Wall time: 54.6 s\n"
+      "drift_stability = 1.502\n",
+      "drift_scale = 4.265e-07\n",
+      "CPU times: user 46.2 s, sys: 7.11 s, total: 53.3 s\n",
+      "Wall time: 52.9 s\n"
      ]
     }
    ],
@@ -597,7 +604,10 @@
     "covariates = torch.zeros(data.size(-2), 0)  # empty\n",
     "forecaster = Forecaster(Model2(), data[..., T0:T1, :], covariates[T0:T1],\n",
     "                        create_plates=create_plates,\n",
-    "                        learning_rate=0.1, num_steps=1201, log_every=50)"
+    "                        learning_rate=0.1, num_steps=1201, log_every=50)\n",
+    "for name, value in forecaster.guide.median().items():\n",
+    "    if value.numel() == 1:\n",
+    "        print(\"{} = {:0.4g}\".format(name, value.item()))"
    ]
   },
   {
@@ -617,8 +627,8 @@
      "output_type": "stream",
      "text": [
       "CRPS = 0.2792\n",
-      "CPU times: user 16.9 s, sys: 8.43 s, total: 25.3 s\n",
-      "Wall time: 30.6 s\n"
+      "CPU times: user 14.6 s, sys: 5.77 s, total: 20.4 s\n",
+      "Wall time: 23.1 s\n"
      ]
     }
    ],
