Add a forecasting tutorial on hierarchical models (#2348)
* Get simple Kalman Filter forecasting working

* Add tutorial to index

* Fix numerical stability issues

* Fix typo

* Add link to new tutorial

* Fix docs list

* Flesh out forecasting tutorial iii

* Address review comments

* Switch to a variant of fehiepsis numerical fix

* Rerun notebook

* Fix typo

* Mention OU process

* Flesh out hierarchical modeling tutorial

* Finish first draft

* Remove obsolete .expand()

* Fix typos

* Address review comments

* Print stability parameter

--- a/tutorial/source/forecasting_i.ipynb
+++ b/tutorial/source/forecasting_i.ipynb
@@ -8,6 +8,11 @@
     "\n",
     "This tutorial introduces the [pyro.contrib.forecast](http://docs.pyro.ai/en/latest/contrib.forecast.html) module, a framework for forecasting with Pyro models. This tutorial covers only univariate models and simple likelihoods. This tutorial assumes the reader is already familiar with [SVI](http://pyro.ai/examples/svi_part_ii.html) and [tensor shapes](http://pyro.ai/examples/tensor_shapes.html).\n",
     "\n",
+    "See also:\n",
+    "\n",
+    "- [Forecasting II: state space models](http://pyro.ai/examples/forecasting_ii.html)\n",
+    "- [Forecasting III: hierarchical models](http://pyro.ai/examples/forecasting_iii.html)\n",
+    "\n",
     "#### Summary\n",
     "\n",
     "- To create a forecasting model:\n",
