Fix some tutorial rendering errors

--- a/tutorial/source/dirichlet_process_mixture.ipynb
+++ b/tutorial/source/dirichlet_process_mixture.ipynb
@@ -21,7 +21,7 @@
         "colab_type": "text"
       },
       "source": [
-        "# **Dirichlet Process Mixture Models in Pyro**\n",
+        "# Dirichlet Process Mixture Models in Pyro\n",
         "\n",
         "\n",
         "## What are Bayesian nonparametric models?\n",
