--- a/tutorial/source/modules.ipynb
+++ b/tutorial/source/modules.ipynb
@@ -11,7 +11,7 @@
     "\n",
     "#### Summary:\n",
     "\n",
-    "- [PyroModule](http://docs.pyro.ai/en/stable/nn.html#pyro.nn.module.PyroModule)s are like [nn.Module](https://pytorch.org/docs/stable/nn.html#torch.nn.Module)s but allowing Pyro effects for sampling and constraints.\n",
+    "- [PyroModule](http://docs.pyro.ai/en/stable/nn.html#pyro.nn.module.PyroModule)s are like [nn.Module](https://pytorch.org/docs/stable/nn.html#torch.nn.Module)s but allow Pyro effects for sampling and constraints.\n",
     "- `PyroModule` is a mixin subclass of `nn.Module` that overrides attribute access (e.g. `.__getattr__()`).\n",
     "- There are three different ways to create a `PyroModule`:\n",
     "  - create a new subclass: `class MyModule(PyroModule): ...`,\n",
@@ -24,7 +24,8 @@
     "- Parameters and stochastic attributes are named automatically (no string required).\n",
     "- `PyroSample` attributes are sampled once per `.__call__()` of the outermost `PyroModule`.\n",
     "- To enable Pyro effects on methods other than `.__call__()`, decorate them with @[pyro_method](http://docs.pyro.ai/en/stable/nn.html#pyro.nn.module.pyro_method).\n",
-    "- A `PyroModule` model may contain `nn.Module` attributes, but not vice versa.\n",
+    "- A `PyroModule` model may contain `nn.Module` attributes.\n",
+    "- An `nn.Module` model may contain at most one `PyroModule` attribute (see [naming section](#Caution-avoiding-duplicate-names)).\n",
     "- An `nn.Module` may contain both a `PyroModule` model and `PyroModule` guide (e.g. [Predictive](http://docs.pyro.ai/en/stable/inference_algos.html#pyro.infer.predictive.Predictive)).\n",
     "\n",
     "#### Table of Contents\n",
@@ -34,8 +35,10 @@
     "- [How effects work](#How-effects-work)\n",
     "- [How to constrain parameters](#How-to-constrain-parameters)\n",
     "- [How to make a PyroModule Bayesian](#How-to-make-a-PyroModule-Bayesian)\n",
+    "- [Caution: accessing attributes inside plates](#⚠-Caution:-accessing-attributes-inside-plates)\n",
     "- [How to create a complex nested PyroModule](#How-to-create-a-complex-nested-PyroModule)\n",
-    "- [How naming works](#How-naming-works)"
+    "- [How naming works](#How-naming-works)\n",
+    "- [Caution: avoiding duplicate names](#⚠-Caution:-avoiding-duplicate-names)"
    ]
   },
   {
@@ -68,9 +71,9 @@
    "source": [
     "## How `PyroModule` works  <a class=\"anchor\" id=\"How-PyroModule-works\"></a>\n",
     "\n",
-    "[PyroModule](http://docs.pyro.ai/en/stable/nn.html#pyro.nn.module.PyroModule) aims to combine Pyro's primitives and effect handlers with PyTorch's [nn.Module](https://pytorch.org/docs/stable/nn.html#torch.nn.Module) idiom, thereby enabling Bayesian treatment of existing `nn.Module`s and enabling model serving via [jit_module](https://pytorch.org/docs/stable/jit.html#torch.jit.trace_module). Before you start using `PyroModule`s it will help to understand how they work, so you can avoid pitfalls.\n",
+    "[PyroModule](http://docs.pyro.ai/en/stable/nn.html#pyro.nn.module.PyroModule) aims to combine Pyro's primitives and effect handlers with PyTorch's [nn.Module](https://pytorch.org/docs/stable/nn.html#torch.nn.Module) idiom, thereby enabling Bayesian treatment of existing `nn.Module`s and enabling model serving via [jit.trace_module](https://pytorch.org/docs/stable/jit.html#torch.jit.trace_module). Before you start using `PyroModule`s it will help to understand how they work, so you can avoid pitfalls.\n",
     "\n",
-    "`PyroModule` is a subclass of `nn.Module`. `PyroModule` enables Pyro effects by inserting effect handling logic on module attribute access, overriding the `.__getattr__()`, `.__setattr__()`, and `.__delattr__()` methods. Additionally, because some effects apply only once per model invocation (like sampling), `PyroModule` overrides the `.__call__()` method to ensure samples are generated at most once per `.__call__()` invocation (note `nn.Module` subclasses typically implement a `.forward()` method wich is called by `.__call__()`)."
+    "`PyroModule` is a subclass of `nn.Module`. `PyroModule` enables Pyro effects by inserting effect handling logic on module attribute access, overriding the `.__getattr__()`, `.__setattr__()`, and `.__delattr__()` methods. Additionally, because some effects (like sampling) apply only once per model invocation, `PyroModule` overrides the `.__call__()` method to ensure samples are generated at most once per `.__call__()` invocation (note `nn.Module` subclasses typically implement a `.forward()` method that is called by `.__call__()`)."
    ]
   },
   {
@@ -174,9 +177,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The one difference between manual subclassing and using `PyroModule[-]` is that `PyroModule[-]` also ensures all `nn.Module` superclasses also become `PyroModule`s, which is important for class hierarchies in library code, e.g. `nn.GRU` is a subclass of `nn.RNN`.\n",
+    "The one difference between manual subclassing and using `PyroModule[-]` is that `PyroModule[-]` also ensures all `nn.Module` superclasses also become `PyroModule`s, which is important for class hierarchies in library code. For example since `nn.GRU` is a subclass of `nn.RNN`, also `PyroModule[nn.GRU]` will be a subclass of `PyroModule[nn.RNN]`.\n",
     "\n",
-    "The third way to create a `PyroModule` is to change the type of an existing `nn.Module` instance in-place using [to_pyro_module_](http://docs.pyro.ai/en/stable/nn.html#pyro.nn.module.to_pyro_module_). This is useful if you're using a third-party module factory helper or updating an existing script, e.g."
+    "The third way to create a `PyroModule` is to change the type of an existing `nn.Module` instance in-place using [to_pyro_module_()](http://docs.pyro.ai/en/stable/nn.html#pyro.nn.module.to_pyro_module_). This is useful if you're using a third-party module factory helper or updating an existing script, e.g."
    ]
   },
   {
@@ -266,7 +269,7 @@
      "text": [
       "params before: ['weight', 'bias']\n",
       "params after: ['weight', 'bias_unconstrained']\n",
-      "bias: tensor([1.4490, 1.2131], grad_fn=<AddBackward0>)\n"
+      "bias: tensor([0.9777, 0.8773], grad_fn=<AddBackward0>)\n"
      ]
     }
    ],
@@ -306,9 +309,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## How make a `PyroModule`  Bayesian  <a class=\"anchor\" id=\"How-to-make-a-PyroModule-Bayesian\"></a>\n",
+    "## How to make a `PyroModule`  Bayesian  <a class=\"anchor\" id=\"How-to-make-a-PyroModule-Bayesian\"></a>\n",
     "\n",
-    "So far our `Linear` module is still deterministic. To make it randomized and Bayesian, we'll replace `nn.Parameter` and `PyroParam` attributes with [PyroSample](http://docs.pyro.ai/en/stable/nn.html#pyro.nn.module.PyroSample) attributes, specifying a prior. Let's put a simple prior over the weights."
+    "So far our `Linear` module is still deterministic. To make it randomized and Bayesian, we'll replace `nn.Parameter` and `PyroParam` attributes with [PyroSample](http://docs.pyro.ai/en/stable/nn.html#pyro.nn.module.PyroSample) attributes, specifying a prior. Let's put a simple prior over the weights, taking care to expand its shape to `[5,2]` and declare event dimensions with [.to_event()](http://docs.pyro.ai/en/stable/distributions.html#pyro.distributions.torch_distribution.TorchDistributionMixin.to_event) (as explained in the [tensor shapes tutorial](https://pyro.ai/examples/tensor_shapes.html))."
    ]
   },
   {
@@ -322,16 +325,16 @@
      "text": [
       "params before: ['weight', 'bias_unconstrained']\n",
       "params after: ['bias_unconstrained']\n",
-      "weight: tensor([[-1.2244, -2.1323],\n",
-      "        [-1.7820, -0.0531],\n",
-      "        [-0.0862,  0.3671],\n",
-      "        [ 0.1380, -0.0936],\n",
-      "        [-1.3319,  0.9314]])\n",
-      "weight: tensor([[-1.3541,  0.2207],\n",
-      "        [ 0.2694, -0.8108],\n",
-      "        [ 0.2341, -0.3566],\n",
-      "        [ 0.9123,  0.7472],\n",
-      "        [-1.0821, -1.1166]])\n"
+      "weight: tensor([[-0.8668, -0.0150],\n",
+      "        [ 3.4642,  1.9076],\n",
+      "        [ 0.4717,  1.0565],\n",
+      "        [-1.2032,  1.0821],\n",
+      "        [-0.1712,  0.4711]])\n",
+      "weight: tensor([[-1.2577, -0.5242],\n",
+      "        [-0.7785, -1.0806],\n",
+      "        [ 0.6239, -0.4884],\n",
+      "        [-0.2580, -1.2288],\n",
+      "        [-0.7540, -1.9375]])\n"
      ]
     }
    ],
@@ -352,7 +355,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Notice that the `.weight` parameter now disappears, and each time we call `linear()` a new weight is sampled from the prior. We can see all the Pyro effects that appear in the trace:"
+    "Notice that the `.weight` parameter now disappears, and each time we call `linear()` a new weight is sampled from the prior. In fact, the weight is sampled when the `Linear.forward()` accesses the `.weight` attribute: this attribute now has the special behavior of sampling from the prior.\n",
+    "\n",
+    "We can see all the Pyro effects that appear in the trace:"
    ]
   },
   {
@@ -364,12 +369,12 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "param bias tensor([1.4490, 1.2131], grad_fn=<AddBackward0>)\n",
-      "sample weight tensor([[-2.5114e-01, -1.5137e-01],\n",
-      "        [ 1.1249e-01, -3.0812e-04],\n",
-      "        [-1.0936e+00,  2.8015e-01],\n",
-      "        [ 9.1441e-01, -1.2774e+00],\n",
-      "        [ 1.5951e+00,  6.8906e-01]])\n"
+      "param bias tensor([0.9777, 0.8773], grad_fn=<AddBackward0>)\n",
+      "sample weight tensor([[ 1.8043,  1.5494],\n",
+      "        [ 0.0128,  1.4100],\n",
+      "        [-0.2155,  0.6375],\n",
+      "        [ 1.1202,  1.9672],\n",
+      "        [-0.1576, -0.6957]])\n"
      ]
     }
    ],
@@ -407,8 +412,68 @@
     "           prior=dist.LogNormal(0, 1).expand([out_size]).to_event(1))\n",
     "       self.weight = PyroSample(\n",
     "           prior=dist.Normal(0, 1).expand([in_size, out_size]).to_event(2))\n",
+    "\n",
     "    def forward(self, input):\n",
-    "        return self.bias + input @ self.weight"
+    "        return self.bias + input @ self.weight  # this line samples bias and weight"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Note that samples are drawn at most once per `.__call__()` invocation, for example\n",
+    "```py\n",
+    "class BayesianLinear(PyroModule):\n",
+    "    ...\n",
+    "    def forward(self, input):\n",
+    "        weight1 = self.weight      # Draws a sample.\n",
+    "        weight2 = self.weight      # Reads previous sample.\n",
+    "        assert weight2 is weight1  # All accesses should agree.\n",
+    "        ...\n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## ⚠ Caution: accessing attributes inside plates  <a class=\"anchor\" id=\"⚠-Caution:-accessing-attributes-inside-plates\"></a>\n",
+    "\n",
+    "Because `PyroSample` and `PyroParam` attributes are modified by Pyro effects, we need to take care where parameters are accessed. For example [pyro.plate](http://docs.pyro.ai/en/stable/primitives.html#pyro.primitives.plate) contexts can change the shape of sample and param sites. Consider a model with one latent variable and a batched observation statement. We see that the only difference between these two models is where the `.loc` attribute is accessed."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class NormalModel(PyroModule):\n",
+    "    def __init__(self):\n",
+    "        super().__init__()\n",
+    "        self.loc = PyroSample(dist.Normal(0, 1))\n",
+    "\n",
+    "class GlobalModel(NormalModel):\n",
+    "    def forward(self, data):\n",
+    "        # If .loc is accessed (for the first time) outside the plate,\n",
+    "        # then it will have empty shape ().\n",
+    "        loc = self.loc\n",
+    "        assert loc.shape == ()\n",
+    "        with pyro.plate(\"data\", len(data)):\n",
+    "            pyro.sample(\"obs\", dist.Normal(loc, 1), obs=data)\n",
+    "        \n",
+    "class LocalModel(NormalModel):\n",
+    "    def forward(self, data):\n",
+    "        with pyro.plate(\"data\", len(data)):\n",
+    "            # If .loc is accessed (for the first time) inside the plate,\n",
+    "            # then it will be expanded by the plate to shape (plate.size,).\n",
+    "            loc = self.loc\n",
+    "            assert loc.shape == (len(data),)\n",
+    "            pyro.sample(\"obs\", dist.Normal(loc, 1), obs=data)\n",
+    "\n",
+    "data = torch.randn(10)\n",
+    "LocalModel()(data)\n",
+    "GlobalModel()(data)"
    ]
   },
   {
@@ -422,7 +487,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -431,11 +496,12 @@
     "        super().__init__()\n",
     "        self.linear = BayesianLinear(in_size, out_size)  # this is a PyroModule\n",
     "        self.obs_scale = PyroSample(dist.LogNormal(0, 1))\n",
+    "\n",
     "    def forward(self, input, output=None):\n",
     "        obs_loc = self.linear(input)  # this samples linear.bias and linear.weight\n",
     "        obs_scale = self.obs_scale    # this samples self.obs_scale\n",
     "        with pyro.plate(\"instances\", len(input)):\n",
-    "            return pyro.sample(\"obs\", dist.Normal(obs_loc, self.obs_scale).to_event(1),\n",
+    "            return pyro.sample(\"obs\", dist.Normal(obs_loc, obs_scale).to_event(1),\n",
     "                               obs=output)"
    ]
   },
@@ -448,7 +514,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -461,8 +527,8 @@
       "step 300 loss = 1.739\n",
       "step 400 loss = 1.691\n",
       "step 500 loss = 1.673\n",
-      "CPU times: user 2.31 s, sys: 24.1 ms, total: 2.34 s\n",
-      "Wall time: 2.35 s\n"
+      "CPU times: user 2.35 s, sys: 24.8 ms, total: 2.38 s\n",
+      "Wall time: 2.39 s\n"
      ]
     }
    ],
@@ -487,6 +553,44 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "`PyroSample` statements may also depend on other sample statements or parameters. In this case the `prior` can be a callable depending on `self`, rather than a constant distribution. For example consider the hierarcical model"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "tensor(0.5387)"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "class Model(PyroModule):\n",
+    "    def __init__(self):\n",
+    "        super().__init__()\n",
+    "        self.dof = PyroSample(dist.Gamma(3, 1))\n",
+    "        self.loc = PyroSample(dist.Normal(0, 1))\n",
+    "        self.scale = PyroSample(lambda self: dist.InverseGamma(self.dof, 1))\n",
+    "        self.x = PyroSample(lambda self: dist.Normal(self.loc, self.scale))\n",
+    "        \n",
+    "    def forward(self):\n",
+    "        return self.x\n",
+    "    \n",
+    "Model()()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## How naming works  <a class=\"anchor\" id=\"How-naming-works\"></a>\n",
     "\n",
     "In the above code we saw a `BayesianLinear` model embedded inside another `Model`. Both were `PyroModule`s. Whereas simple [pyro.sample](http://docs.pyro.ai/en/stable/primitives.html#pyro.primitives.sample) statements require name strings, `PyroModule` attributes handle naming automatically. Let's see how that works with the above `model` and `guide` (since `AutoNormal` is also a `PyroModule`).\n",
@@ -496,7 +600,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -528,7 +632,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -570,6 +674,61 @@
     "        ...\n",
     "```\n",
     "Finally, `AutoNormal` contains a `pyro.sample` statement for each unconstrained latent site followed by a [pyro.deterministic](http://docs.pyro.ai/en/stable/primitives.html#pyro.primitives.deterministic) statement to map the unconstrained sample to a constrained posterior sample."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## ⚠ Caution: avoiding duplicate names <a class=\"anchor\" id=\"⚠-Caution:-avoiding-duplicate-names\"></a>\n",
+    "\n",
+    "`PyroModule`s name their attributes automatically, event for attributes nested deeply in other `PyroModule`s. However care must be taken when mixing usual `nn.Module`s with `PyroModule`s, because `nn.Module`s do not support automatic site naming.\n",
+    "\n",
+    "Within a single model (or guide):\n",
+    "\n",
+    "If there is only a single `PyroModule`, then your are safe.\n",
+    "```diff\n",
+    "  class Model(nn.Module):        # not a PyroModule\n",
+    "      def __init__(self):\n",
+    "          self.x = PyroModule()\n",
+    "-         self.y = PyroModule()  # Could lead to name conflict.\n",
+    "+         self.y = nn.Module()  # Has no Pyro names, so aviods conflict.\n",
+    "```\n",
+    "If there are only two `PyroModule`s then one must be an attribute of the other.\n",
+    "```diff\n",
+    "class Model(PyroModule):\n",
+    "    def __init__(self):\n",
+    "       self.x = PyroModule()  # ok\n",
+    "```\n",
+    "If you have two `PyroModule`s that are not attributes of each other, then they must be connected by attribute links through other `PyroModule`s. These can be sibling links\n",
+    "```diff\n",
+    "- class Model(nn.Module):     # Could lead to name conflict.\n",
+    "+ class Model(PyroModule):    # Ensures names are unique.\n",
+    "      def __init__(self):\n",
+    "          self.x = PyroModule()\n",
+    "          self.y = PyroModule()\n",
+    "```\n",
+    "or ancestor links\n",
+    "```diff\n",
+    "  class Model(PyroModule):\n",
+    "      def __init__(self):\n",
+    "-         self.x = nn.Module()    # Could lead to name conflict.\n",
+    "+         self.x = PyroModule()   # Ensures y is conected to root Model.\n",
+    "          self.x.y = PyroModule()\n",
+    "```\n",
+    "\n",
+    "Sometimes you may want to store a `(model,guide)` pair in a single `nn.Module`, e.g. to serve them from C++. In this case it is safe to make them attributes of a container `nn.Module`, but that container should *not* be a `PyroModule`.\n",
+    "```python\n",
+    "class Container(nn.Module):            # This cannot be a PyroModule.\n",
+    "    def __init__(self, model, guide):  # These may be PyroModules.\n",
+    "        super().__init__()\n",
+    "        self.model = model\n",
+    "        self.guide = guide\n",
+    "    # This is a typical trace-replay pattern seen in model serving.\n",
+    "    def forward(self, data):\n",
+    "        tr = poutine.trace(self.guide).get_trace(data)\n",
+    "        return poutine.replay(model, tr)(data)\n",
+    "```"
    ]
   },
   {
